--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,5 +28,8 @@ openinspire = "openinspire.core:main"
 [tool.setuptools.packages.find]
 where = ["."]
 
+[tool.setuptools]
+include-package-data = true
+
 [tool.setuptools.package-data]
 openinspire = ["*.yml", "*.yaml"]
